[gd_scene load_steps=6 format=3 uid="uid://dw2yenml27uaa"]

[ext_resource type="Texture2D" uid="uid://bovc2av7ymnf2" path="res://Dale_man_podes_ser_put0_pero_no_seas_trol0.png" id="1_ey3hm"]
[ext_resource type="Script" path="res://noseastrolo.gd" id="1_k86rq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyplv"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3p65"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqkc0"]
size = Vector2(6, 4)

[node name="noseastrolo" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_k86rq")

[node name="DaleManPodesSerPut0PeroNoSeasTrol0" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, -2.98023e-08)
scale = Vector2(0.00555556, 0.0037037)
texture = ExtResource("1_ey3hm")

[node name="notrolo" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 17
monitoring = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="notrolo"]
shape = SubResource("RectangleShape2D_oyplv")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_p3p65")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 2.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rqkc0")

[connection signal="area_entered" from="notrolo" to="." method="_on_notrolo_area_entered"]
[connection signal="body_entered" from="notrolo" to="." method="_on_notrolo_body_entered"]
[connection signal="body_entered" from="notrolo" to="notrolo" method="_on_body_entered" flags=18]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
